fix overflow-x: hidden to body

--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@
     letter-spacing: 0.15rem;
 }
 
+body {
+    overflow-x: hidden;
+}
+
 header {
     background-color: #2c3e50;
 }
